# amazon-freertos

cmake/vendors/unisoc/ivy5661/: CMakeLists.txt
demos/common/defender/: aws_iot_demo_defender.c
demos/common/devmode_key_provisioning/: aws_dev_mode_key_provisioning.c
demos/common/include/: aws_iot_config_common.h
demos/common/network_manager/: aws_iot_demo_network.c  aws_iot_network_manager.c
demos/common/wifi_provisioning/: README.md  aws_wifi_connect_task.c
demos/espressif/esp32_devkitc_esp_wrover_kit/: esp32_demos.code-workspace
demos/nordic/nrf52840-dk/ses/: aws_demos_ble.emProject
demos/pc/windows/common/config_files/: aws_pkcs11_config.h
demos/pc/windows/visual_studio/: aws_demos.vcxproj  aws_demos.vcxproj.filters
demos/unisoc/ivy5661/common/application_code/: main.c
demos/unisoc/ivy5661/common/application_code/vendor_code/bsp/: syscalls.c  unisoc_init.c  uwp_uart.c
demos/unisoc/ivy5661/common/application_code/vendor_code/scripts/imgtool/: main.py
demos/unisoc/ivy5661/common/config_files/: FreeRTOSConfig.h  aws_bufferpool_config.h
demos/unisoc/ivy5661/eclipse/: .cproject  .project
lib/FreeRTOS-Plus-TCP/include/: FreeRTOSIPConfigDefaults.h
lib/FreeRTOS-Plus-TCP/source/portable/NetworkInterface/unisoc/: NetworkInterface.c
lib/bluetooth_low_energy/services/device_information/: aws_ble_device_information.c
lib/bluetooth_low_energy/services/mqtt_ble/: aws_iot_mqtt_ble.c
lib/bluetooth_low_energy/services/wifi_provisioning/: aws_ble_wifi_provisioning.c
lib/crypto/: aws_crypto.c
lib/defender/: aws_iot_defender.c  aws_iot_defender_collector.c  aws_iot_defender_mqtt.c  aws_iot_defender_reporter_socket.c
lib/include/: aws_ble_device_information.h  aws_ble_wifi_provisioning.h  aws_iot_defender.h  aws_iot_mqtt_ble.h  aws_iot_serializer.h  aws_pkcs11.h  aws_wifi.h  iot_ble.h  iot_ble_device_information.h  iot_ble_wifi_provisioning.h  iot_metrics.h
lib/include/private/: aws_ble_config_defaults.h  aws_ble_service_internals.h  aws_iot_defender_internal.h  aws_iot_mqtt_serialize_ble.h
lib/metrics/: aws_iot_metrics.c  iot_metrics.c
lib/mqtt/: aws_iot_mqtt_serialize_ble.c  aws_mqtt_lib.c
lib/ota/portable/unisoc/: aws_ota_pal.c
lib/pkcs11/portable/unisoc/uwp566x/: aws_pkcs11_pal.c
lib/secure_sockets/: aws_secure_sockets_common.c
lib/serializer/cbor/: aws_iot_serializer_tinycbor_decoder.c
lib/tls/: aws_tls.c
lib/utils/: aws_system_init.c
lib/wifi/portable/unisoc/ivy5661/: aws_wifi.c
tests/common/defender/: aws_iot_tests_defender_api.c
tests/common/include/: aws_clientcredential.h  aws_clientcredential_keys.h  aws_iot_config_common.h  aws_test_tcp.h  aws_test_tls.h
tests/common/mqtt/: aws_test_mqtt_lib.c
tests/common/ota/: aws_test_ota_pal.c
tests/common/test_runner/: aws_test_runner.c
tests/common/wifi/: aws_test_wifi.c
tests/pc/windows/visual_studio/: aws_tests.vcxproj  aws_tests.vcxproj.filters
tests/unisoc/ivy5661/common/application_code/: main.c
tests/unisoc/ivy5661/common/application_code/vendor_code/bsp/: syscalls.c  unisoc_init.c  uwp_led.c  uwp_led.h  uwp_uart.c  uwp_uart.h
tests/unisoc/ivy5661/common/config_files/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  aws_mqtt_config.h  aws_ota_agent_config.h  aws_test_runner_config.h  aws_test_tcp_config.h
tests/unisoc/ivy5661/eclipse/: .cproject  .project
tools/ota_e2e_tests/: ivy5661_board.json
